# PyToSQL

./: README.md  pyproject.toml
.github/workflows/: master.yaml
PyToSQL/: SQLBuilder.py
src/: SQLBuilder.py
tests/integration/: create_table.yaml  test_sql_create table.py
